Fix "same as primary applicant" copy addresses logic; add unlink toggle to turn off linking: https://app.asana.com/0/30184214178581/32647664906067 Fix styles for applicant card not going full width on mobile

--- a/app/styles/components/applicant-card.styl
+++ b/app/styles/components/applicant-card.styl
@@ -49,11 +49,6 @@ $applicantCardMaxWidth ?= 40em
 				position absolute
 				top 0
 				right 0
-			.applicant-card-full-name
-				text-indent 3em
-				display inline-block
-				+media-query($breakpointMain)
-					text-indent initial
 		display inline-block
 		vertical-align top
 		&-full-name
